--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,20 +14,27 @@ dependencies:
 
   cupertino_icons: ^1.0.2
 
-dev_dependencies:
-  flutter_test:
-    sdk: flutter
-
-  flutter_lints: ^1.0.0
-
   # State
   flutter_bloc: ^8.0.1
   bloc: ^8.0.1
   equatable: ^2.0.3
 
+  # Error handling (Either class)
+  dartz: ^0.10.1
+
+  # di
+  get_it: ^7.2.0
+
   # Network
 
   # Local
+  shared_preferences: ^2.0.13
+
+dev_dependencies:
+  flutter_test:
+    sdk: flutter
+
+  flutter_lints: ^1.0.0
 
 flutter:
 
