--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,10 @@ dependencies:
 
   # Local
   shared_preferences: ^2.0.13
+  sqflite: ^2.0.2
+    # directories
+  path_provider: ^2.0.9
+  path: ^1.8.0
 
 dev_dependencies:
   flutter_test:
