--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,13 @@ dependencies:
 
   # Local
   shared_preferences: ^2.0.13
-  sqflite: ^2.0.2
+
+  #sqflite: ^2.0.2
+
+  #drift:
+  drift: ^1.5.0
+    #sqflite for android/ios
+  sqlite3_flutter_libs: ^0.5.0
     # directories
   path_provider: ^2.0.9
   path: ^1.8.0
@@ -42,6 +48,10 @@ dev_dependencies:
     sdk: flutter
 
   flutter_lints: ^1.0.0
+  # generates query code
+  drift_dev: ^1.5.2
+  # code-generation
+  build_runner: ^2.1.8
 
 flutter:
 
