--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,7 +26,8 @@ dependencies:
   get_it: ^7.2.0
 
   # WebView
-  webview_flutter: ^3.0.2
+#  webview_flutter: ^3.0.2
+  easy_web_view: ^1.6.0
 
   # Network
 
