--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,17 +28,19 @@ dependencies:
   # WebView
 #  webview_flutter: ^3.0.2
   easy_web_view: ^1.6.0
+  flutter_cors: ^1.3.2
 
   # Network
+  dio: ^4.0.6
+  retrofit: ^3.0.1+1
+  logger: ^1.1.0
+  json_annotation: ^4.4.0
+  json_serializable: ^6.1.6
 
   # Local
   shared_preferences: ^2.0.13
-
-  #drift:
   drift: ^1.5.0
-    #sqflite for android/ios
   sqlite3_flutter_libs: ^0.5.0
-    # directories
   path_provider: ^2.0.9
   path: ^1.8.0
 
@@ -55,6 +57,7 @@ dev_dependencies:
   drift_dev: ^1.5.2
   # code-generation
   build_runner: ^2.1.8
+  retrofit_generator: ^4.0.1
 
 flutter:
 
