--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,8 +26,8 @@ dependencies:
   get_it: ^7.2.0
 
   # WebView
-#  webview_flutter: ^3.0.2
-  easy_web_view: ^1.6.0
+  webview_flutter: ^3.0.2
+#  easy_web_view: ^1.6.0
   flutter_cors: ^1.3.2
 
   # Network
