--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,52 +12,52 @@ dependencies:
   flutter:
     sdk: flutter
 
-  cupertino_icons: ^1.0.2
+  cupertino_icons: 1.0.2
 
   # State
-  flutter_bloc: ^8.0.1
-  bloc: ^8.0.1
-  equatable: ^2.0.3
+  flutter_bloc: 8.0.1
+  bloc: 8.0.2
+  equatable: 2.0.3
 
   # Error handling (Either class)
-  dartz: ^0.10.1
+  dartz: 0.10.1
 
   # di
-  get_it: ^7.2.0
+  get_it: 7.2.0
 
   # WebView
-  webview_flutter: ^3.0.2
+  webview_flutter: 3.0.2
 #  easy_web_view: ^1.6.0
-  flutter_cors: ^1.3.2
+  flutter_cors: 1.3.2
 
   # Network
-  dio: ^4.0.6
-  retrofit: ^3.0.1+1
-  logger: ^1.1.0
-  json_annotation: ^4.4.0
-  json_serializable: ^6.1.6
+  dio: 4.0.6
+  retrofit: 3.0.1+1
+  logger: 1.1.0
+  json_annotation: 4.4.0
+  json_serializable: 6.1.6
 
   # Local
-  shared_preferences: ^2.0.13
-  drift: ^1.5.0
-  sqlite3_flutter_libs: ^0.5.0
-  path_provider: ^2.0.9
-  path: ^1.8.0
+  shared_preferences: 2.0.13
+  drift: 1.5.0
+  sqlite3_flutter_libs: 0.5.0
+  path_provider: 2.0.9
+  path: 1.8.0
 
   #rxdart:
-  rxdart: ^0.27.1
+  rxdart: 0.27.1
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  flutter_lints: ^1.0.0
+  flutter_lints: 1.0.0
   # generates query code
-  drift_dev: ^1.5.2
+  drift_dev: 1.5.2
   # code-generation
-  build_runner: ^2.1.8
-  retrofit_generator: ^4.0.1
+  build_runner: 2.1.8
+  retrofit_generator: 4.0.1
 
 flutter:
 
