--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,7 +48,10 @@ dependencies:
   rxdart: 0.27.1
 
   #date_format:
-  intl: ^0.17.0
+  intl: 0.17.0
+
+  #staggered_grid_view_flutter:
+  flutter_staggered_grid_view: 0.6.1
 
 
 dev_dependencies:
@@ -56,8 +59,10 @@ dev_dependencies:
     sdk: flutter
 
   flutter_lints: 1.0.0
+
   # generates query code
   drift_dev: 1.5.2
+
   # code-generation
   build_runner: 2.1.8
   retrofit_generator: 4.0.1
